--- a/my-website-files/contactPageStyles.css
+++ b/my-website-files/contactPageStyles.css
@@ -1,12 +1,23 @@
+/* universal style */
 * {
     box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
+.ContactInfo {
+    display: flex;
+    padding: 3px;
+}
+
+ul.contact-ul {
+    list-style-type: square;
+  }
+
+ /* NavBar()()()NavBar()()()NavBar()()()NavBar()()() */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -14,29 +25,34 @@ body {
     background-color: #333;
     color: white;    
 }
-
+        
 .brand-title {
     font-size: 1.5rem;
     margin: .5rem;
 }
-
-.navbar-links ul {
+        
+ .toggle-button {
+            display: none;
+        }
+        
+ .navbar-links ul {
     margin: 0;
     padding: 0;
     display: flex;
 }
-
+        
+      
 .navbar-links li {
     list-style: none;
 }
-
+        
 .navbar-links li a {
     text-decoration: none;
     color: white;
     padding: 1rem;
     display: block;
 }
-
+        
 .navbar-links li:hover {
     background-color: #555;
 }
@@ -58,6 +74,8 @@ body {
     background-color: white;
     border-radius: 10px;
 }
+
+/* @media@@@@@media@@@@@media@@@@@media@@@@@media@@@@@ */
 
 @media (max-width: 400px) {
     .toggle-button {
@@ -92,24 +110,40 @@ body {
     }
 
 }
-h1 {
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 30px;
-}
 
-h2 {
-    font-size: 1.2rem;
-    text-align: center;
-    margin-top: 20px;
-}
+ /* ContactForm#####ContactForm#####ContactForm##### */
+        .container {
+            width: 100%;
+            max-width: 400px;
+            margin: 20px auto;
+            background: #f0f0f0; 
+            border-radius: 4px;
+        }
 
-iframe {
-        display: block;
-        margin: 0 auto;
-    }
+        .contact-form input,
+        .contact-form textarea {
+            width: 100%;
+            padding: 2vw 4vw;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            resize: vertical;
+        }
+        
+        .contact-form button {
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px 16px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        
+        .contact-form button:hover {
+            background-color: #459449;
+        }
 
-   h3 {
+h3.copyright {
     font-size: 0.8rem;
     text-align: center;
     margin-top: 50px;
